fdo#80968 file resultset seek table to before beginning on opening resultset

Change-Id: I73abbc7cfe0804e729a711a247b6e085b4e41d95